# src/Geometry/CMakeLists.txt

set(LIB_GEOMETRY Geometry)

set(GEOMETRY_BASICS_DIR Basics)
set(GEOMETRY_BASICS_SOURCES
    ${GEOMETRY_BASICS_DIR}/Edge.cpp
)

set(GEOMETRY_MESH_DIR Mesh)
set(GEOMETRY_MESH_CUBIC_DIR ${GEOMETRY_MESH_DIR}/Cubic)
set(GEOMETRY_MESH_SURFACE_DIR ${GEOMETRY_MESH_DIR}/Surface)
set(GEOMETRY_MESH_VOLUMETRIC_DIR ${GEOMETRY_MESH_DIR}/Volumetric)
set(GEOMETRY_MESH_SOURCES
    ${GEOMETRY_MESH_CUBIC_DIR}/CubicGrid.cpp

    ${GEOMETRY_MESH_SURFACE_DIR}/SurfaceMesh.cpp
    ${GEOMETRY_MESH_SURFACE_DIR}/TriangleCell.cpp

    ${GEOMETRY_MESH_VOLUMETRIC_DIR}/VolumetricMesh.cpp
)

set(GEOMETRY_UTILS_DIR Utils)
set(GEOMETRY_UTILS_INTERSECTIONS_DIR ${GEOMETRY_UTILS_DIR}/Intersections)
set(GEOMETRY_UTILS_OVERLAPS_DIR ${GEOMETRY_UTILS_DIR}/Overlaps)
set(GEOMETRY_UTILS_SOURCES
    ${GEOMETRY_UTILS_INTERSECTIONS_DIR}/SegmentTriangleIntersection.cpp
    ${GEOMETRY_UTILS_OVERLAPS_DIR}/TriangleOverlapCalculator.cpp
)

set(GEOMETRY_SOURCES
    ${GEOMETRY_BASICS_SOURCES}
    ${GEOMETRY_MESH_SOURCES}
    ${GEOMETRY_UTILS_SOURCES}
)

add_library(${LIB_GEOMETRY} ${GEOMETRY_SOURCES})
